sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: reassignment to val
			i=i+1
                         ^AlgGnomeSort:8: error: value =< is not a member of Int
		if(getValeur(i-1)=<getValeur(i)){
                                 ^AlgGnomeSort:9: error: reassignment to val
			i=i+1
                         ^AlgGnomeSort:13: error: reassignment to val
			i=i-1
                         ^